--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -12,11 +12,12 @@
 <header class="header">
   <div class="container">
     <div class="inner">
-      <h1 class="logo">
-        Movies app
-      </h1>
+      <p class="logo" alt="mdb logo" id="logo">MDB</p>
       <div class="search">
-        search
+        <form>
+          <input type="text" class="input" id="search" placeholder="movie search">
+          <input type="submit" class="=button" id="submitSearch">
+        </form>
       </div>
     </div>
   </div>
